--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <a href="https://github.com/oleg131/mvgen"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
       <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-dark" href="#">MVGen</a></h5>
