--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/blueimp-file-upload/9.21.0/css/jquery.fileupload.min.css" />
+
     <!-- Custom styles for this template -->
     <link href="static/css/mvgen.css" rel="stylesheet">
   </head>
@@ -133,8 +135,9 @@
 
     <script>
       $(document).ready(function() {
-          $('[data-toggle="tooltip"]').tooltip();
+        $('[data-toggle="tooltip"]').tooltip();
       });
     </script>
+
   </body>
 </html>
