--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
         <form>
           <div class="form-row  align-items-center">
             <div class="col-md-2">
-              <label>Upload audio</label>
+              <label>Select audio</label>
               <input type="file" class="form-control" id="upload" accept="audio/*" />
             </div>
             <div class="col-md-2">
-              <label class="control-label">Upload video</label>
+              <label class="control-label">Select video</label>
               <input type="file" class="form-control" id="video-upload" accept="video/*" multiple />
             </div>
             <div class="col-md-2" id="video-category">
@@ -113,6 +113,9 @@
         <div class="shell-wrap">
           <ul class="shell-body">
             <li class="typewriter">Initialized.</li>
+            <li class="typewriter">Select audio file.</li>
+            <li class="typewriter">Select video chunk files (or pick a demo category).</li>
+            <li class="typewriter">The rest is optional.</li>
           </ul>
         </div>
       </div>
